Fixed markup and spacing of buttons

--- a/source/styles/modules/venues/cover.styl
+++ b/source/styles/modules/venues/cover.styl
@@ -57,11 +57,13 @@
 			.address
 				font-size 12px
 				font-weight normal
-			.directions
-				display inline-block
-				padding 2px 4px
-				color white
-				font-size 10px
-				border 1px solid white
-				padding 2px 4px
-				margin 4px 0 0 0
+			.buttons
+				font-size 0
+				margin-top 4px
+				a
+					display inline-block
+					color white
+					font-size 10px
+					border 1px solid white
+					padding 2px 4px
+					margin 0 4px 0 0
